[gd_scene load_steps=7 format=3 uid="uid://cofc7csdh3fep"]

[ext_resource type="Script" uid="uid://dl8prl6cwl2di" path="res://Scripts/note.gd" id="1_poybh"]
[ext_resource type="Texture2D" uid="uid://dves0mbt8d7d4" path="res://Assets/button.png" id="1_ucs03"]

[sub_resource type="CircleShape2D" id="CircleShape2D_poybh"]
radius = 81.0

[sub_resource type="Animation" id="Animation_poybh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("noteSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.382, 0.382)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("noteSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wfx1k"]
resource_name = "hitPop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("noteSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0701558, 0.152513),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.382, 0.382), Vector2(1.1, 1.1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("noteSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0701558, 0.152513),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0.67, 0.67, 0.67, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wfx1k"]
_data = {
&"RESET": SubResource("Animation_poybh"),
&"hitPop": SubResource("Animation_wfx1k")
}

[node name="Note" type="Area2D"]
script = ExtResource("1_poybh")

[node name="noteSprite" type="Sprite2D" parent="."]
scale = Vector2(0.382, 0.382)
texture = ExtResource("1_ucs03")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_poybh")

[node name="hitPop" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wfx1k")
}

[connection signal="animation_finished" from="hitPop" to="." method="_on_hit_pop_animation_finished"]
